refactor: Corrections qualité code selon recommandations SonarQube
- Ajout de @NonNull sur les paramètres de méthodes (RentalService, MessageService)
- Création de FileStorageException pour remplacer RuntimeException générique
- Ajout du handler FileStorageException avec code HTTP 422 (UNPROCESSABLE_ENTITY)
- Amélioration de la null-safety et de la gestion d'erreurs métier
- Réduction des code smells et amélioration de la maintenabilité